@@ -1,6 +1,10 @@
                                                      -*- coding: utf-8 -*-
 Changes with APR-util 1.5.0
 
+  *) apr_ldap: resolve possible hangs or crashes when the pool passed
+     to apr_ldap_rebind_init() is cleaned up and apr_ldap_rebind
+     is re-initted and re-used. PR50918. [Eric Covener]
+
 Changes with APR-util 1.4.0
 
   *) http://svn.apache.org/viewvc/apr/apr-util/branches/1.4.x/CHANGES?view=markup
